kubernetes/TrueNAS-Int/deployments/downloads/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: downloads
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /PlexMedia
      volumes:
        - name: config
          hostPath:
            path: /data/FastPool/AppData/Sonarr
        - name: media
          hostPath:
            path: /data/BigPool/Media
