kubernetes/TrueNAS-Int/deployments/downloads/sonarr/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: sonarr
    namespace: downloads
spec:
    selector:
        app: sonarr
    type: NodePort
    ports:
        - name: ENC[AES256_GCM,data:dl0=,iv:UMvWzL2eoXVA0e+231jFqxURNnkQzd0MHd0tXc+je7U=,tag:R3IDU4Y8uC4/KM3n1WxL3g==,type:str]
          port: ENC[AES256_GCM,data:3aM0+A==,iv:DMEdd6LLOong8sImknNpIe2dM3XsrOyPeVHf88hkP8E=,tag:h/ssOaATKYon2j9DA/tc8g==,type:int]
          targetPort: ENC[AES256_GCM,data:c/h6PA==,iv:sZXwRCsimOmIpc+fH8c1aYnA6VszskTGte0bxNxDG2A=,tag:TFKiFrbi9BNE1CSduIkizw==,type:int]
          nodePort: ENC[AES256_GCM,data:afJupw==,iv:tYbrsfSpqsQerurFrdZR5wORkkA0cMgJ4cIYIiwNlWw=,tag:NBjwfkXOV4zDp8gDfY5zcg==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXcGJnekFzMW1rY3hQRjhm
[...]
            lZkA7lK2hBlxh/J5BZUsOrdk2d9EusIn1isf5Tk0/PkU+dRYM2laow==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-13T01:10:19Z"
    mac: ENC[AES256_GCM,data:N4Hz68ydNhOcrIYtlFRvjbBHod26g6Mxtjh/ekgEN/Zavv8d+TaBIkWI3VlfZ0y+sZZ2bs/gRgwADzGfQrwca2m0w00Igd0E5kw1XVKp5r+176c5I/nagvdGC7hgd4ajr502n5HvR6SAbDEFRmft6lPzV/+Fne3a3tM6q9A0YLc=,iv:ekcLMZY5GrPzfnuGYEIxzJUhNsjSCiSwN8i5cRN8/Pc=,tag:zNpUe6NwLb+cMHaomRIF8w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
