kubernetes/TrueNAS-Int/deployments/downloads/sonarr/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: sonarr
    namespace: downloads
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:oIU/aP6aX8BxTIiMqKJPVYrkkWgQmFz8h1I=,iv:xp9fo0dnI/xtYWQ+kDJViflZeUswZk8LWJKBBiKE2J8=,tag:PqkdD1KKoRZDVTRMT6lpBg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:8mzs5qk8,iv:Ab3XIC6Javqw5Cr0f/3b7SnL7mL3/BrIN+1SqgrhYTI=,tag:fWlEoA8PU08jtTNowyPJCg==,type:str]
              port: ENC[AES256_GCM,data:Ckkd3g==,iv:Q7MmIvToX9bFrN1KTvusSgQt1Ey8SU/VSF6xzaCAp0M=,tag:7eO/U/kwaVDx40vwPR5XdA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:DgTrK5BPGyP3bK61aC0=,iv:wyJ8wzyBqNNPySmjgVq5Z3qDHMxx1gx0yTsWJA0Y7gY=,tag:/HoIBsjXRHyrq7ol4d1l5g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhWm1abVBqZHY1YnlQRVlL
[...]
            85/sne1ve9josxvaEC7m1ZWK7lvpT4MQncfEowUy3NI+0/sgeEeM7w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-13T17:29:55Z"
    mac: ENC[AES256_GCM,data:5chEFlknRlSffovdKOzr6heI6iKZ42SB3HBDAXfZ81O0ZgJdiIA8PxqKMs7QfTyk6+km76mBCEPfBQVAugnq+Ypr0nMsTURIzk4jzjtc/kDVSN6cwZQjAr0EfiOqCyBgLvk8K8ZRBnLXtK/iMSqDbqofRI6AWT46pK1zNIz6KrQ=,iv:ZtR2oDi0gDv1XOC+xovqIwdBQe2mr88uJBnOKeC0lYE=,tag:Iq5mydBISbRkau0lyeIfng==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames)$
    version: 3.8.1
